# Zugklang

./: .docker-compose.prod.yaml.swp  .env.example  .gitattributes  .gitignore  README.md  TODO.md  commands.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.sentry.yaml  next.config.ts  nginx.conf  nginx.prod.conf  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  react-chessboard.md  tsconfig.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.husky/: pre-commit  pre-push
backend/anti-cheat/: .dockerignore  .env.base  .env.example  .gitignore  Dockerfile  README.md  docker.sh  generate_synthetic_artifacts.py  main.py  pyproject.toml  requirements.txt  schema.prisma  start.sh
backend/anti-cheat/data/: send_games.py
backend/anti-cheat/prisma/: schema.prisma
backend/anti-cheat/src/: .env.base  config.py  db.py  ingestion.py  insights.py  main.py  queries.py  queue_manager.py  redis_client.py  schemas.py  start.sh  util.py
backend/anti-cheat/src/api/: routes.py  schemas.py
backend/anti-cheat/src/common/: utils.py
backend/anti-cheat/src/data/: loader.py
backend/anti-cheat/src/data_preparation/: prepare_data.py
backend/anti-cheat/src/ml/: explainer.py  model.py  prediction.py  training.py
backend/anti-cheat/src/model/: explainer.py  predict.py  predictor.py  shap_values.py  train_model.py
backend/anti-cheat/src/tests/: anon.py  run_tests.py
backend/anti-cheat/src/ws_monitor/: __init__.py  repository.py  service.py
backend/anti-cheat/tests/: conftest.py  test_api.py  test_unit.py
dev-docs/: Test.md  anti-cheat.md  ngrok.md  production-hardening.md  secrets.md  trpc.md  vercel.json.md  vercel.ts.md
docs/: bullmq.md  claude.code.config.md  docker.md  nextjs16-eslint-migration.md  prisma-dev.md  production-hardening.md  redis.md  reverse-proxy.md  ruff.md  themes.md  tri-d-chess.md
environment/: .env.sample
frontend/: .env.example  .gitignore  .vercelignore  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  sentry.client.config.ts  tsconfig.json  vercel.json  vitest.config.ts
monitoring/: loki.yml  otel-collector.yml  postgres_exporter.yml  prometheus.yml  promtail.yml  tempo.yml
src/: proxy.ts
(+1161 files in other folders)
