[project]
name = "anti-cheat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "uvicorn[standard]>=0.41.0",
]
