[project]
name = "anti-cheat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bson>=0.5.10",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "keras>=3.13.2",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "mongomock>=4.3.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "prisma>=0.15.0",
    "pymongo>=4.15.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "tensorflow-cpu>=2.20.0",
    "uvicorn>=0.41.0",
]
